cambio realizado en un archivo de la rama pruebas

--- a/estils.css
+++ b/estils.css
@@ -1,3 +1,5 @@
+Esto es una modificación en un archivo del proyecto.
+
 *{ /* Eliminamos todos los márgenes de la página*/
     margin: 0;
     padding:0;
